# chat-responses-codex

./: .dockerignore  .env.example  .gitignore  .hermes.env.example  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_INFO.md  Dockerfile  PORTAL_QUOTA_UNIFICATION.md  README.md  REFACTORING_PROGRESS.md  RTK.md  SECURITY.md  UPSTREAM_ROUTING_FEATURE.md  codex-config.toml.example  codex-model-catalog.json  docker-compose.yml
.sisyphus/plans/: fix-portal-charts-and-token.md
crates/gateway-core/: Cargo.toml
crates/gateway-core/src/: admin.rs  lib.rs
crates/gateway-web/: Cargo.toml
crates/gateway-web/src/: app.rs  demo.rs  lib.rs  main.rs  shell.rs
crates/gateway-web/src/pages/: dashboard.rs  downstreams.rs  login.rs  logs.rs  mod.rs  portal.rs  upstreams.rs
docs/: PROTOCOL_COMPATIBILITY.md  codex-integration-guide.md
docs/superpowers/plans/: 2026-06-09-announcement.md  2026-06-21-multi-key-upstream.md  2026-06-23-architecture-split.md  2026-06-24-auto-sync-model-key-mapping.md  2026-06-24-client-compatibility-matrix.md  2026-06-24-dashboard-model-probe-redesign.md  2026-06-25-claude-real-streaming.md  2026-07-02-gateway-error-visibility.md  2026-07-02-gateway-module-split.md  2026-07-02-playground-stream-feedback.md  2026-07-03-admin-observability-ui-optimization.md  2026-07-03-troubleshooting-center.md  2026-07-10-generic-agent-protocol-fidelity.md  2026-07-15-validated-downstream-secret-fast-path.md  2026-07-16-codex-opencode-live-acceptance.md  2026-07-16-compatibility-aware-model-qualification.md  2026-07-16-live-model-four-client-ui-refresh.md  2026-07-16-portal-playground-and-troubleshooting-cleanup.md  2026-07-17-adaptive-full-width-console-layout.md  2026-07-17-admin-ui-refresh.md  2026-07-17-capability-profiles-pagination.md  2026-07-17-console-ui-foundation.md  2026-07-17-favicon-refresh.md  2026-07-17-first-semantic-event-stream-recovery.md  2026-07-17-integration-playground-final-polish.md  2026-07-17-portal-ui-refresh.md  2026-07-17-slow-first-output-hedging-and-agent-integration.md  2026-07-18-codex-reasoning-catalog-compatibility.md  2026-07-18-deploy-proxy-isolation.md  2026-07-18-fast-atomic-config-mutations.md  2026-07-18-key-model-route-resilience.md  2026-07-22-domestic-model-stream-stability.md  2026-07-22-remove-obsolete-concurrency-retry.md  2026-07-24-manual-upstream-model-selection.md
docs/superpowers/specs/: 2026-05-19-admin-ui-modernization-design.md  2026-05-20-gateway-ui-and-codex-capability-preservation-design.md  2026-05-20-postgresql-15-normalized-persistence-design.md  2026-05-21-leptos-architecture-design.md  2026-05-23-vue3-rest-api-refactor-plan.md  2026-06-09-announcement-design.md  (+24 more)
docs/verification/: 2026-07-10-agent-protocol-baseline.json  2026-07-10-agent-protocol-fidelity.md  2026-07-16-compatible-model-codex-opencode.md  2026-07-22-codex-opencode-portal-acceptance.md  2026-07-22-domestic-model-stream-stability.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tests.json  vite.config.spec.ts  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/tests/: vite.config.spec.ts
scripts/: build-package-image.sh  build-release-fast.sh  compatibility_matrix.sh  deploy.sh  hermes.sh  installed_client_smoke.sh  portal_playground_e2e.sh  render_live_capabilities.sh
src/: auth.rs  keys.rs  lib.rs  main.rs  protocol.rs  routing.rs  server.rs  state.rs  upstream_feedback.rs  util.rs
src/capabilities/: mod.rs  policy.rs  probe_queue.rs  profile.rs  resolver.rs  runtime_hints.rs  types.rs
src/protocol/: image_adapter.rs  reasoning_adapter.rs  stream_aggregate.rs  tool_adapter.rs
src/server/: admin.rs  concurrency_retry.rs  gateway.rs  portal.rs
src/state/: context_profile.rs  file_store.rs  freekey_sync.rs  log_queries.rs  model_discovery.rs  model_key_sync.rs  model_qualification.rs  normalize.rs  postgres.rs  postgres_scram.rs  route_health.rs  store.rs  types.rs  usage.rs
templates/: README.md
templates/capabilities/: current-deployment.example.json
templates/claude-code/: settings.json
templates/codex/: config.toml.example  model-catalog.json
templates/hermes/: config.yaml
templates/opencode/: opencode.json
templates/state/: gateway-state.example.json
tests/: admin.rs  admin_api.rs  admin_api_upstreams.rs  admin_capabilities.rs  admin_dashboard.rs  admin_downstreams.rs  admin_global_context_profiles.rs  admin_logs.rs  admin_model_probe.rs  admin_models.rs  admin_upstreams.rs  announcement_api.rs  capability_policy.rs  capability_probe.rs  capability_profiles.rs  capability_resolver.rs  capability_state.rs  compatibility_semantics.rs  docker.rs  downstream_quota.rs  frontend_api_client.rs  frontend_assets.rs  gateway.rs  generic_dispatch.rs  keys.rs  load.rs  log_rotation.rs  model_costs_fix.rs  model_costs_integration.rs  model_key_sync.rs  multi_key_mapping.rs  portal_api.rs  portal_flow.rs  portal_helpers.rs  portal_model_probe.rs  postgres.rs  postgres_roundtrip.rs  probe_queue.rs  protocol.rs  route_health.rs  (+9 more)
tests/common/: mod.rs
tests/gateway/: aggregate.rs  auth.rs  capability_routing.rs  chat.rs  claude.rs  common.rs  compatibility.rs  dialect_retry.rs  images.rs  responses.rs  stream_only.rs  stream_only_learning.rs
tests/unit/: protocol.rs  routing.rs  upstream_feedback.rs
(+142 files in other folders)
