[package]
name = "chat2responses-gateway"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
axum = "=0.8.9"
base64 = "=0.22.1"
bytes = "=1.11.1"
futures-util = "=0.3.32"
rand = "=0.9.4"
reqwest = { version = "=0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
serde_urlencoded = "=0.7.1"
thiserror = "=1.0.69"
tokio = { version = "=1.52.1", features = ["full"] }
tower-http = { version = "=0.6.8", features = ["trace"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter", "fmt"] }
uuid = { version = "=1.23.1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "=3.27.0"
tower = "=0.5.3"

[lib]
name = "chat2responses_gateway"
path = "src/lib.rs"

[[bin]]
name = "chat2responses-gateway"
path = "src/main.rs"
