[package]
name = "chat-responses-codex"
version = "0.1.1"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
chrono = "0.4"
gateway-core = { path = "crates/gateway-core" }
axum = "=0.8.9"
base64 = "=0.22.1"
bytes = "=1.11.1"
futures-util = "=0.3.32"
hmac = "0.12"
rand = "=0.9.4"
reqwest = { version = "=0.12.28", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
serde_urlencoded = "=0.7.1"
sha2 = "0.10"
thiserror = "=1.0.69"
tokio = { version = "=1.52.1", features = ["full"] }
tower-http = { version = "=0.6.8", features = ["trace"] }
tower = "=0.5.3"
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter", "fmt"] }
subtle = "2"
uuid = { version = "=1.23.1", features = ["v4", "serde"] }
jsonwebtoken = "9.3.0"
rust-embed = "8.5.0"
mime_guess = "2.0"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
bb8 = "0.8"
bb8-postgres = "0.8"

[dev-dependencies]
http-body-util = "=0.1.3"
tempfile = "=3.27.0"

[lib]
name = "chat_responses_codex"
path = "src/lib.rs"

[[bin]]
name = "chat-responses-codex"
path = "src/main.rs"
