[package]
name = "gateway-web"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
axum = "=0.8.9"
gateway-core = { path = "../gateway-core" }
leptos = { version = "0.8", features = ["ssr"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_urlencoded = "=0.7.1"
tokio = { version = "=1.52.1", features = ["full"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter", "fmt"] }
